--- a/README
+++ b/README
@@ -1,1 +1,2 @@
+#### What is AlaQay?
 AlaQay is a place  where you can find many interesting and educational games for children of preschool age. Now kids can combine fun with learning
